add xml2js package

--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "activationCommands": {
     "atom-workspace": "ruby-debugger:toggle"
   },
-  "repository": "https://github.com/johanlunds/ruby-debugger",
+  "repository": "https://github.com/johanlunds/atom-ruby-debugger",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
   },
   "dependencies": {
+    "xml2js": "^0.4.5"
   }
 }
