make integration test pass: make Connect button work and toggle state on Play/pause buttons

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "atom": ">0.50.0"
   },
   "dependencies": {
+    "javascript-state-machine": "^2.3.5",
     "rivets": "^0.8.0",
     "sax": "^0.6.1"
   }
