refactor: split up into methods instead of switch

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "javascript-state-machine": "^2.3.5",
     "rivets": "^0.8.0",
-    "sax": "^0.6.1"
+    "sax": "^0.6.1",
+    "underscore-plus": "^1.6.6"
   }
 }
