--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^2.1.3",
     "rivets": "^0.8.0",
     "sax": "^0.6.1",
+    "season": "^5.1.5",
     "underscore-plus": "^1.6.6"
   }
 }
