--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.0.1",
   "description": "Provides a small Ruby-debugger in Atom",
   "activationCommands": {
-    "atom-workspace": "ruby-debugger:toggle",
-    "atom-workspace": "ruby-debugger:add-breakpoint"
+    "atom-workspace": "ruby-debugger:toggle"
   },
   "repository": "https://github.com/johanlunds/atom-ruby-debugger",
   "license": "MIT",
